squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-edge_cases-parent_scope.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Load:
        data:
          Const: 0
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Get:
        IsIn:
          - 0
          - lhs_span:
              start: Start
              end: End
            op_span:
              start: Start
              end: End
            rhs_span:
              start: Start
              end: End
    - Jump:
        data:
          kind: IfTrue
          block: 1
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 5
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 6
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 8
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 7
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 14
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 8
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 14
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 12
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 11
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 16
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 9
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 18
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 20
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 10
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 19
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 19
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 20
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Compare:
        data:
          reg: 18
          kind: IsEq
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 17
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 16
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 1
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 2
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 3
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 6
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 4
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 4
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 2
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Jump:
        data:
          kind: Always
          block: 3
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
    - 43
    - 5
    - 5
  constants:
    - String: a
    - String: print
    - String: a
    - String: tostring
    - String: "\n"
    - String: print
    - String: "root: "
    - String: print
    - String: getroottable
    - String: assert
    - String: getroottable
  is_varargs: true
  num_regs: 21
  num_params: 0
  locals:
    - NamedReg:
        - 0
        - vargv
  num_locals: 0
