squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-edge_cases-shadow_builtin.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Load:
        data:
          PrimType: EmptyTable
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          FunIdx: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setf:
          - - 0
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 0
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Get:
        Getc:
          - 2
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 3
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 4
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 6
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 3
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
  constants:
    - String: table
    - String: setdelegate
    - String: table
    - String: setdelegate
    - String: getroottable
  is_varargs: true
  num_regs: 7
  num_params: 0
  locals:
    - NamedReg:
        - 0
        - vargv
  num_locals: 0
