squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-parse_test-newlines.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Load:
        data:
          Const: 0
        ctx:
          start: Start
          end: End
    - Jump:
        data:
          kind: IfTrue
          block: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          FunIdx: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 3
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Const: 5
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 4
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Const: 7
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 6
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Const: 9
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 8
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 10
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 11
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 4
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Load:
        data:
          Const: 13
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 14
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 7
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 15
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 6
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Set:
        Setc:
          - - 12
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 16
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 17
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 9
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 12
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 18
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 19
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 13
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 12
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Class:
        data:
          inherits: false
        ctx:
          class_kw_span:
            start: Start
            end: End
          class_body_span:
            start: Start
            end: End
          extends_kw_ty_span: ~
    - Load:
        data:
          Const: 21
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 22
        ctx:
          start: Start
          end: End
    - Set:
        Setf:
          - - 14
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Const: 23
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 24
        ctx:
          start: Start
          end: End
    - Set:
        Setf:
          - - 14
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Const: 25
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Load:
        data:
          FunIdx: 1
        ctx:
          start: Start
          end: End
    - Set:
        Setf:
          - - 14
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Const: 26
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 15
        ctx:
          start: Start
          end: End
    - Load:
        data:
          FunIdx: 2
        ctx:
          start: Start
          end: End
    - Set:
        Setf:
          - - 14
            - true
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Reg: 14
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 20
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 1
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 2
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 1
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Jump:
        data:
          kind: Always
          block: 3
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
    - 62
    - 2
    - 2
  constants:
    - Integer: 1
    - String: print
    - String: "Yes"
    - String: test
    - String: a
    - Integer: 1
    - String: b
    - Integer: 2
    - String: c
    - Integer: 3
    - String: print
    - String: "\n"
    - String: a
    - Integer: 1
    - Integer: 5
    - Integer: 6
    - String: print
    - String: a
    - String: print
    - String: "\n"
    - String: TestClass
    - String: test
    - Integer: 1
    - String: test2
    - Integer: 2
    - String: test3
    - String: test4
  is_varargs: true
  num_regs: 16
  num_params: 0
  locals:
    - NamedReg:
        - 0
        - vargv
  num_locals: 0
