squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-squirrel_repo-fibonacci.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Load:
        data:
          FunIdx: 0
        ctx:
          start: Start
          end: End
    - Set:
        Setc:
          - - 0
            - true
          - ident_span:
              start: Start
              end: End
            assignment_span:
              start: Start
              end: End
            value_span:
              start: Start
              end: End
    - Load:
        data:
          Local: 0
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 1
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 2
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 2
        ctx:
          start: Start
          end: End
    - Compare:
        data:
          reg: 0
          kind: IsNe
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Jump:
        data:
          kind: IfTrue
          block: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 5
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 6
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 7
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 12
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 11
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Store:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 8
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 9
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 7
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 0
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 3
        ctx:
          start: Start
          end: End
    - Get:
        Getf:
          - 5
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 4
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 4
          n_args: 0
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args: []
    - Jump:
        data:
          kind: Always
          block: 3
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
    - 33
    - 12
    - 13
  constants:
    - String: fib
    - String: len
    - Integer: 0
    - Integer: 0
    - String: tointeger
    - Integer: 1
    - String: print
    - String: fib
    - String: "\n"
  is_varargs: true
  num_regs: 13
  num_params: 0
  locals:
    - - vargv
      - 0
    - - n
      - 1
  num_locals: 2
