squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-squirrel_repo-hello.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Misc:
        data: This
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Get:
        Getc:
          - 0
          - ident_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 1
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
  constants:
    - String: print
    - String: Hello World!
  is_varargs: true
  num_regs: 3
  num_params: 0
  locals:
    - NamedReg:
        - 0
        - vargv
  num_locals: 0
