squirrel_lang/src/vm/snapshots/squirrel_lang__vm__compiler__tests__compiler-verify-lexical_structure-keywords.nut.snap
---
source: squirrel_lang/src/vm/compiler.rs
expression: actual_code
---
- code:
    - Load:
        data:
          Const: 0
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 1
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 2
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 1
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 3
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Local: 2
        ctx:
          start: Start
          end: End
    - Arith:
        data:
          op: Add
          reg: 3
        ctx:
          lhs_span:
            start: Start
            end: End
          op_span:
            start: Start
            end: End
          rhs_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 2
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 0
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 1
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 5
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 3
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 4
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 6
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 4
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 5
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Misc:
        data: Root
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 8
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 5
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 6
        ctx:
          start: Start
          end: End
    - Store:
        data:
          Reg: 11
        ctx:
          start: Start
          end: End
    - Get:
        Getfc:
          - 7
          - parent_span:
              start: Start
              end: End
            field_span:
              start: Start
              end: End
    - Store:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Const: 8
        ctx:
          start: Start
          end: End
    - Unary:
        data: NEG
        ctx:
          op_span:
            start: Start
            end: End
          val_span:
            start: Start
            end: End
    - Store:
        data:
          Reg: 12
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 10
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 11
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Store:
        data:
          Reg: 9
        ctx:
          start: Start
          end: End
    - Load:
        data:
          Reg: 7
        ctx:
          start: Start
          end: End
    - Call:
        data:
          reg: 8
          n_args: 1
        ctx:
          fn_span:
            start: Start
            end: End
          call_span:
            start: Start
            end: End
          args:
            - start: Start
              end: End
    - Ret:
        data: Void
        ctx:
          start: Start
          end: End
  block_offsets:
    - 0
  constants:
    - String: foo
    - String: Foo
    - String: print
    - String: print
    - Integer: 6
    - String: print
    - String: verify/lexical_structure/keywords.nut
    - String: slice
    - Integer: 12
  is_varargs: true
  num_regs: 13
  num_params: 0
  locals:
    - - vargv
      - 0
    - - foo
      - 1
    - - Foo
      - 2
  num_locals: 3
